==
  * Bug Fixes
    * Only sleep if driver delay is > 0 [github.com/ps2]
    * Rescue Timeout::Error exception due to smtp server timing out [github.com/ps2]
    * Disk usage condition should use `df -P` to prevent line splitting [github.com/mseppae]

== 0.7.15 / 2009-08-19
  * Minor Enhancements
    * Support SSL Campfire connections [github.com/eric]
    * Allow wildcards in -c configuration file option

== 0.7.14 / 2009-08-10
  * Minor Enhancements
    * Only store log lines when a client wishes to see them
    * Add an lsb-compliant init script into god/init [Woody Peterson]
    * Never require stop command; use default killer if none is specified
  * Bug Fixes
    * Fix redefinition error for time.h and allow it to compile on Ubuntu Edgy [github.com/tbuser]
    * Fix a memory leak in jabber by adding a call to jabber_client.close [github.com/woahdae]
    * Make jabber code manage one connection to make it faster, use less memory,
      and not leak [github.com/woahdae]

== 0.7.13 / 2009-05-04
  * Bug Fixes
    * Auto daemonized processes are now stopped/unmonitored correctly [github.com/jcapote]

== 0.7.12 / 2008-12-10
  * Bug Fixes
    * Fix capistrano deployability [github.com/eric]
    * Fix event handling [brianw]

== 0.7.11 / 2008-11-14
  * Bug Fixes
    * Make notifications work inside lifecycle blocks

== 0.7.10 / 2008-11-13
  * Major Enhancements
    * Enable sending of arbitrary signals to a task or group via `god signal`
  * Bug Fixes
    * setup logging *after* loading a given config file when daemonized. 
      enables logging to the 'God.log_file' specified in a config file. [github.com/jnewland]
  * New Conditions
    * FileMtime < PollCondition - trigger on file mtime durations [github.com/jwilkins]
  * New Contacts
    * Twitter - allow messages to twitter [github.com/jwilkins]
    * Campfire - send messages to 37signals' Campfire [github.com/hellvinz]
  * Minor Enhancements